FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "-c++")

SET_SOURCE_FILES_PROPERTIES(${SWIG_SOURCE_FILE} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${SWIG_SOURCE_FILE} PROPERTIES SWIG_FLAGS "-includeall")

SWIG_ADD_MODULE(pysphero ${SWIG_SOURCE_FILE} ${SOURCE_FILE_LIST})
SWIG_LINK_LIBRARIES(pysphero ${PYTHON_LIBRARIES})
