FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

SET_SOURCE_FILES_PROPERTIES(${SWIG_SOURCE_FILE} PROPERTIES CPLUSPLUS ON)

SWIG_ADD_MODULE(pysphero python ${SWIG_SOURCE_FILE})
SWIG_LINK_LIBRARIES(pysphero ${PYTHON_LIBRARIES} Sphero)
SET_TARGET_PROPERTIES(${SWIG_MODULE_pysphero_REAL_NAME} PROPERTIES PREFIX "" OUTPUT_NAME _sphero)
